--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -4,10 +4,11 @@
 400.04=Request validator not found
 400.05=User not found
 400.06=Source and Destination is same
-400.07=Ride is already offered by vehicle {0}
+400.07=Vehicle is not free for ride
 400.08=Vehcile is already registered {0}
 400.09=User already exist with mobile no {0}
 400.10=Vehicle not found {0}
+400.11=Rides producer and consumer are same
 
 500=Internal Exception
 500.01=JSON request schema processing failed for APi {0}
